# myTTS

./: .gitignore  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  TEST_PLAN.md  app.py  docker-compose.yml  model_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.sh  start.sh  start_backend.sh  start_frontend.sh
backend/: config.py  main.py  requirements.txt
backend/api/: clone.py  tts.py  voices.py
backend/engine/: cosyvoice_engine.py
backend/models/: schemas.py
backend/storage/: audio_store.py
frontend/: app.py
tests/: conftest.py
tests/api/: test_clone.py  test_tts.py  test_voices.py
tests/frontend/: test_app.py
tests/integration/: test_pipeline.py
tests/unit/: test_audio_store.py  test_engine.py  test_schemas.py
