[project]
name = "myTTS"
version = "0.1.0"
description = "Local TTS web application based on Fun-CosyVoice3"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: tests that require the real CosyVoice model or GPU",
    "api: FastAPI endpoint tests",
    "unit: fast unit tests (no model required)",
    "integration: end-to-end pipeline tests",
]
